# Project_Planner

./: README.md  main.py  pyproject.toml  requirements.txt
data/: cost_data.csv  gantt_data_project_data_v1.csv  project_data_v1.json  wbs_data_project_data_v1.csv  wbs_data_v1.json
lib/: gantt_chart.py  global_const.py  radar_chart.py  wbs.py
results/: other_costs_data.csv  robot_arms_data.csv  robot_transport_data.csv
results/visualization_v1/: deliverables_table.csv  milestone_chart_data.csv
scripts/: robot_analysis.py
