[project]
name = "wbs-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "igraph>=0.11.9",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.7",
    "mplcursors>=0.7",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydot>=4.0.1",
]
